Fixed a bug in the HTML file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <h2>Winners</h2>
     <div id="winning-numbers" class="numbers-container"></div>
     <div class="emoji-wealth">💎💰💸</div>
-    <script src="index.pack.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
